--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.example.android.sunshine.app"
@@ -23,15 +23,17 @@ android {
     }
 }
 
+def versionSupport = 30.0
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.github.bumptech.glide:glide:3.5.2'
-    compile 'com.android.support:support-annotations:22.2.0'
-    compile 'com.android.support:gridlayout-v7:22.2.0'
-    compile 'com.android.support:cardview-v7:22.2.0'
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:design:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile "com.android.support:support-annotations:$versionSupport"
+    compile "com.android.support:gridlayout-v7:$versionSupport"
+    compile "com.android.support:cardview-v7:$versionSupport"
+    compile "com.android.support:appcompat-v7:$versionSupport"
+    compile "com.android.support:design:$versionSupport"
+    compile "com.android.support:recyclerview-v7:$versionSupport"
     compile 'com.google.android.apps.muzei:muzei-api:2.0'
     compile 'com.google.android.gms:play-services-gcm:7.5.0'
     compile 'com.google.android.gms:play-services-location:7.5.0'
